Fixed overflow issue with the project cards between min-width 900px and 1240px.

--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,7 @@ body {
 @media only screen and (min-width: 900px) {
 
   .grid-container {
-    grid-template-rows: 140px auto;
+    grid-template-rows: 140px 1400px;
   }
 
   header {
@@ -451,7 +451,7 @@ body {
 
   main {
     grid-template-columns: minmax(300px, auto) minmax(250px, 300px);
-    grid-template-rows: 320px auto;
+    grid-template-rows: 320px 320px;
     padding: 20px 10px;
     gap: 20px 20px;
   }
